# MJPEGWriter

./: CMakeLists.txt  MJPEGWriter.cpp  MJPEGWriter.h  main.cpp
include/: stdfax.h  tools.h
